--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t "supplier.t_title" %></h1>
 
-<% form_for(@supplier) do |f| %>
+<% sementic_form_for(@supplier) do |f| %>
   <%= f.error_messages %>
 
   <p>
