--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,61 +1,57 @@
-<!--myTODO - replace hardcoded text to I18n formats-->
-
 <h1><%= t "products.t_add_new" %></h1>
 
-<%= link_to(image_tag('add.png',:title => [t "global.edit"]), new_product_category_path) %><%= link_to( [t "product_cat.t_create_new_category"], new_product_category_path) %>
+<%= link_to(image_tag('add.png', :title => [t "global.edit"]), new_product_category_path) %><%= link_to([t "product_cat.t_create_new_category"], new_product_category_path) %>
 
-  <div id="top_float_right">
-   <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
+<div id="top_float_right">
+  <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
 </div>
 <% semantic_form_for @product do |f| %>
-<% tabs_for do |tab| %>
-	<% tab.create('basic', 'Basic (required)') do %>
-    <% f.inputs  do %>
-        <%= f.input :our_sku, :input_html => { :size => 20 } %>
-        <%= f.input :description, :hint => (t "products.hint_desc") %>
-        <%= f.input :model %>
-        <%= f.input :manufacturer %>
-        <%= f.input :product_category %>
-        <%= f.input :supplier, :label_method => :company_name  %>
-        <%= f.input :supplier_sku, :input_html => { :size => 20 } %>
-        <%= f.input :cost_price, :input_html => { :size => 10 } %>
-        <%= f.input :sell_price, :input_html => { :size => 10 } %>
-        <%= f.input :created_by, :as => :hidden, :input_html => { :value =>  current_user.username } %>
-        <%= f.input :created_at, :as => :hidden, :input_html => { :value =>  Time.now } %>
+    <% tabs_for do |tab| %>
+        <% tab.create((t "products.tab_menu_basic_name"), (t "products.tab_menu_basic")) do %>
+            <% f.inputs do %>
+                <%= f.input :our_sku, :input_html => {:size => 20} %>
+                <%= f.input :description, :hint => (t "products.hint_desc") %>
+                <%= f.input :model %>
+                <%= f.input :manufacturer %>
+                <%= f.input :product_category %>
+                <%= f.input :supplier, :label_method => :company_name %>
+                <%= f.input :supplier_sku, :input_html => {:size => 20} %>
+                <%= f.input :cost_price, :input_html => {:size => 10} %>
+                <%= f.input :sell_price, :input_html => {:size => 10} %>
+                <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+            <% end %>
         <% end %>
-	<% end %>
-	<% tab.create('Inventory', 'Inventory') do %>
-      <% f.inputs do %>
-            <%= f.input :stocked_product, :hint => "Enable this if stock needs to be in controlled" %>
-            <%= f.input :stocking_qty, :input_html => { :size => 20 } %>
-            <%= f.input :qty_on_hand, :input_html => { :size => 20 } %>
-            <%= f.input :qty_allocated, :input_html => { :size => 20 } %>
-            <%= f.input :qty_available, :input_html => { :size => 20 } %>
-            <%= f.input :qty_ordered, :input_html => { :size => 20 } %>
+        <% tab.create((t "products.tab_menu_inventory_name"), (t "products.tab_menu_inventory_name")) do %>
+            <% f.inputs do %>
+                <%= f.input :stocked_product, :hint => (t "products.stocked") %>
+                <%= f.input :stocking_qty, :input_html => {:size => 20} %>
+                <%= f.input :qty_on_hand, :input_html => {:size => 20} %>
+                <%= f.input :qty_allocated, :input_html => {:size => 20} %>
+                <%= f.input :qty_available, :input_html => {:size => 20} %>
+                <%= f.input :qty_ordered, :input_html => {:size => 20} %>
+            <% end %>
         <% end %>
-   <% end %>
-        <% tab.create('Selling_Information', 'Selling Information') do %>
-          <% f.inputs  do %>
-        <%= f.input :taxable %>
-        <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
-        <%= f.input :discountable %>
-        <%= f.input :disc_amount, :input_html => { :size => 5 } %>
-        <%= f.input :disc_percent, :input_html => { :size => 5 } %>
+        <% tab.create((t "products.tab_menu_selling_name"), (t "products.tab_menu_selling")) do %>
+            <% f.inputs do %>
+                <%= f.input :taxable %>
+                <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
+                <%= f.input :discountable %>
+                <%= f.input :disc_amount, :input_html => {:size => 5} %>
+                <%= f.input :disc_percent, :input_html => {:size => 5} %>
+            <% end %>
+        <% end %>
+        <% tab.create((t "products.tab_menu_warranty_name"), (t "products.tab_menu_warranty")) do %>
+            <% f.inputs do %>
+                <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15} %>
+                <%= f.input :warranty_length, :input_html => {:size => 20} %>
+                <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")] %>
+            <% end %>
+        <% end %>
+
     <% end %>
-        <% end %>
-        <% tab.create('Warranty_Information', 'Warranty Information') do %>
-            <% f.inputs  do %>
-                   <%= f.input :warranty_info, :as => :text, :input_html => {  :rows => 15 }  %>
-                   <%= f.input :warranty_length,  :input_html => { :size => 20 } %>
-                   <%= f.input :warranty_unit, :as => :select, :collection => ["Day(s)", "Month(s)", "Year(s)"] %>
-               <% end %>
-
-
-        <% end %>
-
-<% end %><br>
+    <br>
     <p>
       <%= f.buttons %>
     </p>
-
 <% end %>
