Typo in form. was inputs instead of input...nothing major

--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -14,7 +14,7 @@
                   <%= f.input :business_slogan, :input_html => {:size => 100} %>
                   <%= f.input :business_number, :hint => "ABN, ACN, etc",:input_html => {:size => 30}%>
                   <%= f.input :address, :input_html => {:rows => 5} %>
-                  <%= f.inputs :city, :input_html => {:size => 30} %>
+                  <%= f.input :city, :input_html => {:size => 30} %>
                   <%= f.input :state, :input_html => {:size => 10} %>
                   <%= f.input :zip,  :input_html => {:size => 10} %>
                   <%= f.buttons %>
