--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -54,11 +54,11 @@
                   <%= f.input :direct_deposit_bank_account,  :input_html => {:size => 20} %>
                   <%= f.input :direct_deposit_instructions %>
                   <%= f.input :enable_paymate %>
-                  <%= f.input :paymate_username %>
+                  <%= f.input :paymate_username, :input_html => {:size => 20} %>
                   <%= f.input :paymate_password, :type => :password, :input_html => {:size => 20} %>
                   <%= f.input :paymate_transaction_fee, :hint => (t "settings.hint.transaction_fee"), :input_html => {:size => 5} %>
                   <%= f.input :enable_paypal %>
-                  <%= f.input :paypal_username %>
+                  <%= f.input :paypal_username, :input_html => {:size => 20} %>
                   <%= f.input :paypal_transaction_fee, :hint => (t "settings.hint.transaction_fee"), :input_html => {:size => 5} %>
 
 
